Comment out print out file part

--- a/Python files/Connections_Positions.ipynb
+++ b/Python files/Connections_Positions.ipynb
@@ -1415,7 +1415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1435,22 +1435,29 @@
     "  csv_out = csv.writer(csv_1)\n",
     "  csv_out.writerows([routing_map_dist3[index]] for index in range(0, len(routing_map_dist3)))\n",
     "    \n",
-    "with open('alg2nodes.csv', 'w', newline='') as csv_1:\n",
+    "with open('ent2nodes.csv', 'w', newline='') as csv_1:\n",
     "  csv_out = csv.writer(csv_1)\n",
     "  csv_out.writerows([nodes_entropy2[index]] for index in range(0, len(nodes_entropy2)))\n",
     "    \n",
-    "with open('alg2dist.csv', 'w', newline='') as csv_1:\n",
+    "with open('ent2dist.csv', 'w', newline='') as csv_1:\n",
     "  csv_out = csv.writer(csv_1)\n",
-    "  csv_out.writerows([dist_entropy3[index]] for index in range(0, len(dist_entropy3)))\n",
+    "  csv_out.writerows([dist_entropy2[index]] for index in range(0, len(dist_entropy2)))\n",
     "    \n",
-    "with open('alg3nodes.csv', 'w', newline='') as csv_1:\n",
+    "with open('ent3nodes.csv', 'w', newline='') as csv_1:\n",
     "  csv_out = csv.writer(csv_1)\n",
     "  csv_out.writerows([nodes_entropy3[index]] for index in range(0, len(nodes_entropy3)))\n",
     "    \n",
-    "with open('alg3dist.csv', 'w', newline='') as csv_1:\n",
+    "with open('ent3dist.csv', 'w', newline='') as csv_1:\n",
     "  csv_out = csv.writer(csv_1)\n",
     "  csv_out.writerows([dist_entropy3[index]] for index in range(0, len(dist_entropy3)))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
