Connection/Position framework

--- a/Python files/Connections_Positions.ipynb
+++ b/Python files/Connections_Positions.ipynb
@@ -597,52 +597,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[1,\n",
-       " 2,\n",
-       " 3,\n",
-       " 4,\n",
-       " 5,\n",
-       " 6,\n",
-       " 7,\n",
-       " 8,\n",
-       " 17,\n",
-       " 18,\n",
-       " 22,\n",
-       " 23,\n",
-       " 24,\n",
-       " 27,\n",
-       " 28,\n",
-       " 29,\n",
-       " 30,\n",
-       " 31,\n",
-       " 33,\n",
-       " 34,\n",
-       " 35,\n",
-       " 36,\n",
-       " 37,\n",
-       " 38,\n",
-       " 40,\n",
-       " 82]"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "n = get_neighbours(0)\n",
-    "n"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
    "outputs": [],
@@ -1179,6 +1133,34 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.0622088782157757"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Average entropy\n",
+    "\n",
+    "sum_ent2 = 0\n",
+    "for i in range(6806):\n",
+    "    # sum_ent2 += dist_entropy2[i]\n",
+    "    sum_ent2 += nodes_entropy2[i]\n",
+    "    \n",
+    "avr_ent2 = sum_ent2 / 6806\n",
+    "avr_ent2"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1391,6 +1373,34 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.1864648672380205"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Average entropy\n",
+    "\n",
+    "sum_ent3 = 0\n",
+    "for i in range(6806):\n",
+    "    #sum_ent3 += dist_entropy3[i]\n",
+    "    sum_ent3 += nodes_entropy3[i]\n",
+    "    \n",
+    "avr_ent3 = sum_ent3 / 6806\n",
+    "avr_ent3"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1399,6 +1409,8 @@
     "        8.070232148104614\n",
     "    - Average path lenght:\n",
     "        162.67517508376523\n",
+    "    - Average entropy of the distance: \n",
+    "        0.6037558913009416\n",
     "    \n",
     "## Algorithm 2:\n",
     "    - Average node number of paths:\n",
@@ -1410,7 +1422,9 @@
     "    - Average node number of paths: \n",
     "        3.564942697619747 \n",
     "    - Average path lenght: \n",
-    "        78.99626993739102"
+    "        78.99626993739102\n",
+    "    - Average entropy of the distance:\n",
+    "        0.7678959699816416"
    ]
   },
   {
@@ -1419,7 +1433,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('alg2nodes.csv', 'w', newline='') as csv_1:\n",
+    "'''with open('alg2nodes.csv', 'w', newline='') as csv_1:\n",
     "  csv_out = csv.writer(csv_1)\n",
     "  csv_out.writerows([routing_map_nodes2[index]] for index in range(0, len(routing_map_nodes2)))\n",
     "    \n",
@@ -1449,15 +1463,8 @@
     "    \n",
     "with open('ent3dist.csv', 'w', newline='') as csv_1:\n",
     "  csv_out = csv.writer(csv_1)\n",
-    "  csv_out.writerows([dist_entropy3[index]] for index in range(0, len(dist_entropy3)))"
+    "  csv_out.writerows([dist_entropy3[index]] for index in range(0, len(dist_entropy3)))'''"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
