--- a/Python files/Connections_Positions.ipynb
+++ b/Python files/Connections_Positions.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -27,7 +27,7 @@
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  \"execution_count\": 4,\n"
+      "  \"execution_count\": 77,\n"
      ]
     }
    ],
@@ -244,43 +244,139 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'entropyRand = []\\n\\nfor i in range(100):\\n    print(i)\\n    tmpNode = []\\n    tmpDist = []\\n    randBoundaryIter(83, tmpDist, tmpNode, 3)\\n    if entropyRand == []:\\n        for j in tmpDist:\\n            entropyRand.append(entropy(j))\\n    else:\\n        for j in range(len(tmpDist)):\\n            entropyRand[j] += entropy(tmpDist[j])'"
-      ]
-     },
-     "execution_count": 167,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n",
+      "10\n",
+      "11\n",
+      "12\n",
+      "13\n",
+      "14\n",
+      "15\n",
+      "16\n",
+      "17\n",
+      "18\n",
+      "19\n",
+      "20\n",
+      "21\n",
+      "22\n",
+      "23\n",
+      "24\n",
+      "25\n",
+      "26\n",
+      "27\n",
+      "28\n",
+      "29\n",
+      "30\n",
+      "31\n",
+      "32\n",
+      "33\n",
+      "34\n",
+      "35\n",
+      "36\n",
+      "37\n",
+      "38\n",
+      "39\n",
+      "40\n",
+      "41\n",
+      "42\n",
+      "43\n",
+      "44\n",
+      "45\n",
+      "46\n",
+      "47\n",
+      "48\n",
+      "49\n",
+      "50\n",
+      "51\n",
+      "52\n",
+      "53\n",
+      "54\n",
+      "55\n",
+      "56\n",
+      "57\n",
+      "58\n",
+      "59\n",
+      "60\n",
+      "61\n",
+      "62\n",
+      "63\n",
+      "64\n",
+      "65\n",
+      "66\n",
+      "67\n",
+      "68\n",
+      "69\n",
+      "70\n",
+      "71\n",
+      "72\n",
+      "73\n",
+      "74\n",
+      "75\n",
+      "76\n",
+      "77\n",
+      "78\n",
+      "79\n",
+      "80\n",
+      "81\n",
+      "82\n",
+      "83\n",
+      "84\n",
+      "85\n",
+      "86\n",
+      "87\n",
+      "88\n",
+      "89\n",
+      "90\n",
+      "91\n",
+      "92\n",
+      "93\n",
+      "94\n",
+      "95\n",
+      "96\n",
+      "97\n",
+      "98\n",
+      "99\n"
+     ]
     }
    ],
    "source": [
-    "'''entropyRand = []\n",
+    "entropyRand = []\n",
     "\n",
     "for i in range(100):\n",
     "    print(i)\n",
     "    tmpNode = []\n",
     "    tmpDist = []\n",
-    "    randBoundaryIter(83, tmpDist, tmpNode, 3)\n",
+    "    randBoundaryIter(83, tmpDist, tmpNode, 5)\n",
     "    if entropyRand == []:\n",
     "        for j in tmpDist:\n",
     "            entropyRand.append(entropy(j))\n",
     "    else:\n",
     "        for j in range(len(tmpDist)):\n",
-    "            entropyRand[j] += entropy(tmpDist[j])'''"
+    "            entropyRand[j] += entropy(tmpDist[j])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# printOut('entDistBoundary', entropyRand)\n",
+    "printOut('entDistBoundary5', entropyRand)\n",
     "# printOut('entDistNewDivided', entropyRand)"
    ]
   },
@@ -288,7 +384,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Print out"
+    " # Print out"
    ]
   },
   {
