--- a/Python files/Connections_Positions.ipynb
+++ b/Python files/Connections_Positions.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,21 +16,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Methods.ipynb:5: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  \"execution_count\": 77,\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Add Methods notebook to this notebook\n",
     "%run Methods.ipynb"
@@ -38,16 +26,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
-   "metadata": {},
+   "execution_count": 34,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "2.1469940658762883"
+       "1.919986868367416"
       ]
      },
-     "execution_count": 159,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -58,16 +48,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "50.44033027100041"
+       "49.95115318164757"
       ]
      },
-     "execution_count": 160,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -85,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,12 +84,12 @@
     "routingMap_nodesG = []\n",
     "routingMap_distG = []\n",
     "\n",
-    "greedyIter(83, routingMap_distG, routingMap_nodesG)"
+    "greedyIter(routingMap_distG, routingMap_nodesG)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,18 +105,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "16512"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(dist_entropyG)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.1232377830287896"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Average entropy\n",
     "\n",
     "sum_entG = 0\n",
-    "for i in range(6806):\n",
+    "for i in range(len(routingMap_distG)):\n",
     "    # sum_entG += dist_entropyG[i]\n",
     "    sum_entG += nodes_entropyG[i]\n",
     "    \n",
-    "avr_entG = sum_entG / 6806\n",
+    "avr_entG = sum_entG / len(routingMap_distG)\n",
     "avr_entG"
    ]
   },
@@ -139,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,12 +169,12 @@
     "routingMap_nodesD = []\n",
     "routingMap_distD = []\n",
     "\n",
-    "dijkstraIter(83, routingMap_distD, routingMap_nodesD)"
+    "dijkstraIter(routingMap_distD, routingMap_nodesD)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,18 +190,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.28695961938847"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Average entropy\n",
     "\n",
     "sum_entD = 0\n",
-    "for i in range(6806):\n",
+    "for i in range(len(routingMap_distD)):\n",
     "    # sum_entD += dist_entropyD[i]\n",
     "    sum_entD += nodes_entropyD[i]\n",
     "    \n",
-    "avr_entD = sum_entD / 6806\n",
+    "avr_entD = sum_entD / len(routingMap_distD)\n",
     "avr_entD"
    ]
   },
@@ -206,7 +238,7 @@
     "    print(i)\n",
     "    tmpNode = []\n",
     "    tmpDist = []\n",
-    "    randIter(83, tmpDist, tmpNode)\n",
+    "    randIter(tmpDist, tmpNode)\n",
     "    if entropyRand == []:\n",
     "        for j in tmpDist:\n",
     "            entropyRand.append(entropy(j))\n",
@@ -247,7 +279,7 @@
     "    print(i)\n",
     "    tmpNode = []\n",
     "    tmpDist = []\n",
-    "    randBoundaryIter(83, tmpDist, tmpNode, 5)\n",
+    "    randBoundaryIter(tmpDist, tmpNode, 5)\n",
     "    if entropyRand == []:\n",
     "        for j in tmpDist:\n",
     "            entropyRand.append(entropy(j))\n",
@@ -258,58 +290,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# printOut('entDistBoundary5', entropyRand)\n",
-    "# printOut('entDistNewDivided', entropyRand)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    " # Print out"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "'''with open('alg2nodes.csv', 'w', newline='') as csv_1:\n",
-    "  csv_out = csv.writer(csv_1)\n",
-    "  csv_out.writerows([routing_map_nodes2[index]] for index in range(0, len(routing_map_nodes2)))\n",
-    "    \n",
-    "with open('alg2dist.csv', 'w', newline='') as csv_1:\n",
-    "  csv_out = csv.writer(csv_1)\n",
-    "  csv_out.writerows([routing_map_dist2[index]] for index in range(0, len(routing_map_dist2)))\n",
-    "    \n",
-    "with open('alg3nodes.csv', 'w', newline='') as csv_1:\n",
-    "  csv_out = csv.writer(csv_1)\n",
-    "  csv_out.writerows([routing_map_nodes3[index]] for index in range(0, len(routing_map_nodes3)))\n",
-    "    \n",
-    "with open('alg3dist.csv', 'w', newline='') as csv_1:\n",
-    "  csv_out = csv.writer(csv_1)\n",
-    "  csv_out.writerows([routing_map_dist3[index]] for index in range(0, len(routing_map_dist3)))\n",
-    "    \n",
-    "with open('ent2nodes.csv', 'w', newline='') as csv_1:\n",
-    "  csv_out = csv.writer(csv_1)\n",
-    "  csv_out.writerows([nodes_entropy2[index]] for index in range(0, len(nodes_entropy2)))\n",
-    "    \n",
-    "with open('ent2dist.csv', 'w', newline='') as csv_1:\n",
-    "  csv_out = csv.writer(csv_1)\n",
-    "  csv_out.writerows([dist_entropy2[index]] for index in range(0, len(dist_entropy2)))\n",
-    "    \n",
-    "with open('ent3nodes.csv', 'w', newline='') as csv_1:\n",
-    "  csv_out = csv.writer(csv_1)\n",
-    "  csv_out.writerows([nodes_entropy3[index]] for index in range(0, len(nodes_entropy3)))\n",
-    "    \n",
-    "with open('ent3dist.csv', 'w', newline='') as csv_1:\n",
-    "  csv_out = csv.writer(csv_1)\n",
-    "  csv_out.writerows([dist_entropy3[index]] for index in range(0, len(dist_entropy3)))'''"
+    "printOut('Data/Centroid2/entDistDijkstra2', dist_entropyD)"
    ]
   }
  ],
