Létrehozva a Colaboratory használatával

--- a/Colab/Methods.ipynb
+++ b/Colab/Methods.ipynb
@@ -8,8 +8,7 @@
       "collapsed_sections": [
         "kB2u_JTWKc1F",
         "RMazNvYpKc1H"
-      ],
-      "toc_visible": true
+      ]
     },
     "kernelspec": {
       "display_name": "Python 3",
@@ -40,7 +39,7 @@
         "import numpy as np\n",
         "import random "
       ],
-      "execution_count": 2,
+      "execution_count": 17,
       "outputs": []
     },
     {
@@ -66,7 +65,7 @@
         "    point2 = np.array((positions[0][p2], positions[1][p2], positions[2][p2]))\n",
         "    return np.linalg.norm(point1 - point2)"
       ],
-      "execution_count": 3,
+      "execution_count": 18,
       "outputs": []
     },
     {
@@ -86,7 +85,7 @@
         "    \n",
         "    return neighbours"
       ],
-      "execution_count": 4,
+      "execution_count": 19,
       "outputs": []
     },
     {
@@ -111,7 +110,7 @@
         "    avgNeighbourDist = sum(distances) / len(distances)\n",
         "    return avgNeighbourDist"
       ],
-      "execution_count": 5,
+      "execution_count": 20,
       "outputs": []
     },
     {
@@ -140,7 +139,7 @@
         "    avgNeighbourDistDifferences = sum(distances)/len(distances)\n",
         "    return avgNeighbourDistDifferences"
       ],
-      "execution_count": 6,
+      "execution_count": 21,
       "outputs": []
     },
     {
@@ -156,7 +155,7 @@
         "        dict[key] = []\n",
         "    dict[key].append(value)"
       ],
-      "execution_count": 7,
+      "execution_count": 22,
       "outputs": []
     },
     {
@@ -179,7 +178,7 @@
         "    \n",
         "    return dist"
       ],
-      "execution_count": 8,
+      "execution_count": 23,
       "outputs": []
     },
     {
@@ -198,7 +197,7 @@
         "    \n",
         "    return dist"
       ],
-      "execution_count": 9,
+      "execution_count": 24,
       "outputs": []
     },
     {
@@ -230,7 +229,7 @@
         "        \n",
         "    return ent"
       ],
-      "execution_count": 10,
+      "execution_count": 25,
       "outputs": []
     },
     {
@@ -245,7 +244,7 @@
         "    x = a * len(positions[0]) + b\n",
         "    return np.sum(dist[x])"
       ],
-      "execution_count": 11,
+      "execution_count": 26,
       "outputs": []
     },
     {
@@ -270,7 +269,7 @@
         "    \n",
         "    return list"
       ],
-      "execution_count": 12,
+      "execution_count": 27,
       "outputs": []
     },
     {
@@ -292,7 +291,7 @@
         "        l = sorted(l, key=lambda x: x[0])\n",
         "    return l"
       ],
-      "execution_count": 13,
+      "execution_count": 28,
       "outputs": []
     },
     {
@@ -313,7 +312,7 @@
         "        avg.append(num/len(positions[0]))\n",
         "    return avg"
       ],
-      "execution_count": 14,
+      "execution_count": 29,
       "outputs": []
     },
     {
@@ -361,17 +360,7 @@
         "            routing_dist.append(Euclidean_dist(act, dist[0][0]))\n",
         "            routing_nodes.append(z)\n",
         "            ready=True\n",
-        "        \n",
-        "        # if 'act' has no neighbours \n",
-        "        elif len(neighbours) == 0:\n",
-        "            return \"No neighbours\"\n",
-        "        \n",
-        "        # if 'act' has just 1 neighbour\n",
-        "        elif len(neighbours) == 1:\n",
-        "            routing_dist.append(Euclidean_dist(act, dist[0][0]))\n",
-        "            act = neighbours[0]\n",
-        "            routing_nodes.append(act)\n",
-        "            \n",
+        "\n",
         "        elif len(neighbours) > 1:\n",
         "            not_found = False\n",
         "            for i in dist:\n",
@@ -385,9 +374,19 @@
         "            if not_found == False:\n",
         "                routing_dist.append(Euclidean_dist(act, dist[0][0]))\n",
         "                act = dist[0][0]\n",
-        "                routing_nodes.append(act)"
+        "                routing_nodes.append(act)\n",
+        "\n",
+        "        # if 'act' has just 1 neighbour\n",
+        "        elif len(neighbours) == 1:\n",
+        "            routing_dist.append(Euclidean_dist(act, dist[0][0]))\n",
+        "            act = neighbours[0]\n",
+        "            routing_nodes.append(act)\n",
+        "        \n",
+        "        # if 'act' has no neighbours \n",
+        "        elif len(neighbours) == 0:\n",
+        "            return \"No neighbours\""
       ],
-      "execution_count": 15,
+      "execution_count": 55,
       "outputs": []
     },
     {
@@ -426,17 +425,7 @@
         "            routing_dist.append(Euclidean_dist(act, dist[0][0]))\n",
         "            routing_nodes.append(z)\n",
         "            ready=True\n",
-        "        \n",
-        "        # if 'act' has no neighbours \n",
-        "        elif len(neighbours)==0:\n",
-        "            return \"No neighbours\"\n",
-        "        \n",
-        "        # if 'act' has just 1 neighbour\n",
-        "        elif len(neighbours) == 1:\n",
-        "            routing_dist.append(Euclidean_dist(act, dist[0][0]))\n",
-        "            act = neighbours[0]\n",
-        "            routing_nodes.append(act)\n",
-        "            \n",
+        "\n",
         "        elif len(neighbours) > 1:\n",
         "            # distance from 'p' to the neighbours\n",
         "            dist1 = get_dist(act, neighbours)\n",
@@ -465,10 +454,47 @@
         "            if not_found == False:\n",
         "                routing_dist.append(Euclidean_dist(act, dist[0][0]))\n",
         "                act = dist[0][0]\n",
-        "                routing_nodes.append(act)"
+        "                routing_nodes.append(act)\n",
+        "\n",
+        "        # if 'act' has just 1 neighbour\n",
+        "        elif len(neighbours) == 1:\n",
+        "            routing_dist.append(Euclidean_dist(act, dist[0][0]))\n",
+        "            act = neighbours[0]\n",
+        "            routing_nodes.append(act)\n",
+        "        \n",
+        "        # if 'act' has no neighbours \n",
+        "        elif len(neighbours)==0:\n",
+        "            return \"No neighbours\""
       ],
-      "execution_count": 16,
+      "execution_count": 52,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "5VSPZbhqNI7e",
+        "outputId": "501138fa-dff7-4cde-bb85-56d07b5046fa",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "nodes = []\n",
+        "dist = []\n",
+        "\n",
+        "dijkstra(1,9,nodes,dist)"
+      ],
+      "execution_count": 53,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[(4, [15.344590572116752]), (0, [19.49822697213286]), (6, [25.798750941939833]), (5, [36.720471587727296]), (36, [41.395190709541474]), (33, [42.197853587912384]), (35, [45.286121681769224]), (37, [48.96544753911202]), (7, [52.988761474508685]), (48, [66.83591484552962]), (34, [67.55024761276022]), (47, [70.24085215312306]), (82, [79.30335523867505]), (24, [90.88549439891962]), (18, [107.84129652866407]), (23, [112.0130201522961]), (17, [114.70425154607828]), (22, [125.6035193958912])]\n",
+            "[(5, [32.373310145716125]), (33, [38.951915535245845]), (35, [42.706932767219335]), (36, [43.43564309241848]), (34, [44.451031502115114]), (7, [44.84036410692491]), (37, [45.1517229111004]), (4, [53.83213143549891]), (17, [54.190515949666526]), (18, [55.08246698267312]), (6, [57.51950554766205]), (48, [58.30259882559544]), (24, [67.90906887217683]), (0, [69.21539500072153]), (82, [69.84525602598247]), (23, [77.83006533931774]), (22, [82.94140517826806]), (47, [88.5662240698305])]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -521,7 +547,7 @@
         "            act = nextHop\n",
         "            routing_nodes.append(act)"
       ],
-      "execution_count": 17,
+      "execution_count": 32,
       "outputs": []
     },
     {
@@ -557,17 +583,7 @@
         "            routing_dist.append(Euclidean_dist(act, dist[0][0]))\n",
         "            routing_nodes.append(z)\n",
         "            ready=True\n",
-        "        \n",
-        "        # if 'act' has no neighbours \n",
-        "        elif len(neighbours) == 0:\n",
-        "            return \"No neighbours\"\n",
-        "        \n",
-        "        # if 'act' has just 1 neighbour\n",
-        "        elif len(neighbours) == 1:\n",
-        "            routing_dist.append(Euclidean_dist(act, dist[0][0]))\n",
-        "            act = neighbours[0]\n",
-        "            routing_nodes.append(act)\n",
-        "            \n",
+        "\n",
         "        elif len(neighbours) > 1:\n",
         "            list = []\n",
         "            for i in dist:\n",
@@ -581,9 +597,19 @@
         "            nextHop = random.choice(reduced_neighbours)\n",
         "            routing_dist.append(Euclidean_dist(act, nextHop))\n",
         "            act = nextHop\n",
-        "            routing_nodes.append(act)"
+        "            routing_nodes.append(act)\n",
+        "\n",
+        "        # if 'act' has just 1 neighbour\n",
+        "        elif len(neighbours) == 1:\n",
+        "            routing_dist.append(Euclidean_dist(act, dist[0][0]))\n",
+        "            act = neighbours[0]\n",
+        "            routing_nodes.append(act)\n",
+        "        \n",
+        "        # if 'act' has no neighbours \n",
+        "        elif len(neighbours) == 0:\n",
+        "            return \"No neighbours\""
       ],
-      "execution_count": 18,
+      "execution_count": 33,
       "outputs": []
     },
     {
@@ -610,23 +636,10 @@
         "        if z in neighbours:\n",
         "            routing.append(z)\n",
         "            return routing\n",
-        "        \n",
-        "        # if 'act' has no neighbours \n",
-        "        elif len(neighbours)==0:\n",
-        "            return \"No neighbours\"\n",
-        "        \n",
-        "        # if 'act' has just 1 neighbour\n",
-        "        elif len(neighbours) == 1:\n",
-        "            act = neighbours[0]\n",
-        "            routing.append(act)\n",
-        "            \n",
+        "\n",
         "        elif len(neighbours) > 1:\n",
         "            dist = get_dist(act, neighbours)\n",
-        "            \n",
-        "            # print(\"Neighbours: \", neighbours)\n",
-        "            # print(\"DIST: \", dist)\n",
-        "            # print()\n",
-        "            \n",
+        "\n",
         "            not_found = False\n",
         "            for i in dist:\n",
         "                if i[0] not in routing:\n",
@@ -637,9 +650,18 @@
         "            # If there are no more choosable node on the list     \n",
         "            if not_found == False:\n",
         "                act = dist[0][0]\n",
-        "                routing.append(act)"
+        "                routing.append(act)\n",
+        "\n",
+        "        # if 'act' has just 1 neighbour\n",
+        "        elif len(neighbours) == 1:\n",
+        "            act = neighbours[0]\n",
+        "            routing.append(act)\n",
+        "        \n",
+        "        # if 'act' has no neighbours \n",
+        "        elif len(neighbours)==0:\n",
+        "            return \"No neighbours\""
       ],
-      "execution_count": 19,
+      "execution_count": 34,
       "outputs": []
     },
     {
@@ -676,7 +698,7 @@
         "        nodes.append(routing_nodes)\n",
         "        dist.append(routing_dist)"
       ],
-      "execution_count": 20,
+      "execution_count": 35,
       "outputs": []
     },
     {
@@ -695,7 +717,7 @@
         "        nodes.append(routing_nodes)\n",
         "        dist.append(routing_dist)"
       ],
-      "execution_count": 21,
+      "execution_count": 36,
       "outputs": []
     },
     {
@@ -714,7 +736,7 @@
         "        nodes.append(routing_nodes)\n",
         "        dist.append(routing_dist)"
       ],
-      "execution_count": 22,
+      "execution_count": 37,
       "outputs": []
     },
     {
@@ -733,7 +755,7 @@
         "        nodes.append(routing_nodes)\n",
         "        dist.append(routing_dist)"
       ],
-      "execution_count": 23,
+      "execution_count": 38,
       "outputs": []
     },
     {
@@ -749,7 +771,7 @@
         "    if path not in nodes:\n",
         "        nodes.append(path)"
       ],
-      "execution_count": 24,
+      "execution_count": 39,
       "outputs": []
     },
     {
@@ -775,7 +797,7 @@
         "            if i!= j:\n",
         "                greedyAlgorithm(i,j,dist,nodes)"
       ],
-      "execution_count": 25,
+      "execution_count": 40,
       "outputs": []
     },
     {
@@ -792,7 +814,7 @@
         "            if i!= j:\n",
         "                dijkstraAlgorithm(i,j,dist,nodes)"
       ],
-      "execution_count": 26,
+      "execution_count": 41,
       "outputs": []
     },
     {
@@ -809,7 +831,7 @@
         "            if i!= j:\n",
         "                randAlgorithm(i,j,dist,nodes)"
       ],
-      "execution_count": 27,
+      "execution_count": 42,
       "outputs": []
     },
     {
@@ -826,7 +848,7 @@
         "            if i!= j:\n",
         "                randBoundaryAlgorithm(i,j,dist,nodes,boundary)"
       ],
-      "execution_count": 28,
+      "execution_count": 43,
       "outputs": []
     },
     {
@@ -843,7 +865,7 @@
         "            if i!= j:\n",
         "                greedyAlternative(i,j)"
       ],
-      "execution_count": 29,
+      "execution_count": 44,
       "outputs": []
     },
     {
@@ -867,7 +889,7 @@
         "    connections = pd.read_csv(name + \".csv\", header=None)\n",
         "    return connections"
       ],
-      "execution_count": 30,
+      "execution_count": 45,
       "outputs": []
     },
     {
@@ -885,7 +907,7 @@
         "    positions[0] = positions[0].astype(float)    # Convert data to numerical value\n",
         "    return positions"
       ],
-      "execution_count": 31,
+      "execution_count": 46,
       "outputs": []
     },
     {
@@ -901,7 +923,7 @@
         "    list=df[0].tolist()\n",
         "    return list"
       ],
-      "execution_count": 32,
+      "execution_count": 47,
       "outputs": []
     },
     {
@@ -929,7 +951,7 @@
         "        \n",
         "    return values"
       ],
-      "execution_count": 33,
+      "execution_count": 48,
       "outputs": []
     },
     {
@@ -945,7 +967,7 @@
         "        csv_out = csv.writer(csv_1)\n",
         "        csv_out.writerows([list[index]] for index in range(0, len(list)))"
       ],
-      "execution_count": 34,
+      "execution_count": 49,
       "outputs": []
     },
     {
@@ -964,7 +986,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "boH_pm9jKc1K",
-        "outputId": "abeb1223-ce54-4f3a-9ee8-c74775456048"
+        "outputId": "aac859a4-99be-43f5-e2d6-d9774b8f4a07"
       },
       "source": [
         "# List of the positions of nodes\n",
@@ -973,7 +995,7 @@
         "# List of how nodes connected to each other\n",
         "connections = connectionRead(\"Network/Brain_data/Brain1Connections\")"
       ],
-      "execution_count": 35,
+      "execution_count": 50,
       "outputs": [
         {
           "output_type": "stream",
